# lazy-git-checkout

./: Cargo.toml  LICENSE  README.md  TODO.md  lgc.sh
src/: cli.rs  core.rs  main.rs  ui.rs  widgets.rs
