[package]
name = "lazy-git-checkout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.14", features = ["cargo", "derive"] }
crossterm = "0.27.0"
ratatui = "0.25.0"
tokio = { version = "1.35.1", features = [
    "process",
    "macros",
    "rt-multi-thread",
    "sync",
] }
