[package]
name = "lazy-git-checkout"
version = "0.1.1"
edition = "2021"
description = "Change branches while stashing and unstashing changes"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/manuelpepe/lazy-git-checkout"
homepage = "https://github.com/manuelpepe/lazy-git-checkout"
keywords = ["git", "checkout", "stash", "unstash", "branch"]
categories = ["development-tools", "command-line-utilities"]
authors = ["Manuel Pepe"]

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.14", features = ["cargo", "derive"] }
crossterm = "0.27.0"
ratatui = "0.25.0"
